--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -31,4 +31,4 @@ jobs:
           ssh-keyscan -H "$hosts" > ~/.ssh/known_hosts
           
       - name: Deploy with rsync
-        run: rsync -avz --delete --exclude='cgi-bin/' public/index.html ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.SSH_TARGET_FOLDER }}
+        run: rsync -avz --delete --exclude='cgi-bin/' public/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.SSH_TARGET_FOLDER }}
